# KSVD.jl

./: LICENSE.md  Project.toml  README.md
.github/workflows/: CI.yml  TagBot.yml
@SVDBench/: Manifest.toml  Project.toml
benchmark/: D_times_X.jl  Project.toml  Readme.md  benchmark_sp_matmul.jl  benchmark_sp_matmul_subset.jl  benchmark_svd_solvers.jl  generate_benchmark_data.jl  scaling_experiment.jl  skip_omega.jl  weak_scaling_experiment_K.jl  weak_scaling_experiment_N.jl
benchmark/SVDBench/: bmres.csv  (+4 more)
eval-sae-bench/: Manifest.toml  Project.toml  README.md  pyproject.toml
eval-sae-bench/julia_env/: Manifest.toml  Project.toml
eval-sae-bench/julia_env/pyjuliapkg/: juliapkg.json  meta.json
eval-sae-bench/scripts/: compute_coherence_ours.jl  compute_coherence_saes.py  evalmodel.py  get_explanations.py  get_gemma_embeddings.py  ksvd_gemma.jl  ksvdmodel.py  toy_problem.jl
examples/: memory_mapped_files.jl
ext/: KSVDCudaExt.jl  KSVDDistributedExt.jl  batched_device_op.jl
ksvd_benchmarks/: bmark-1.toml  bmark-2.toml  bmark0.toml  bmark10.toml  bmark2.toml  bmark3.toml  bmark4.toml  bmark5.toml  bmark6.toml  bmark7.toml  bmark9.toml
scripts/: plot_benchmarks.jl  run_benchmark.jl  setup_repl.jl
src/: KSVD.jl  atomreplacement.jl  dictionary_learning.jl  dictionary_tracking.jl  krylov_svd.jl  ksvd.jl  ksvd_loop.jl  ksvd_types.jl  ksvd_update.jl  ksvd_update_legacy.jl  ksvd_update_optimized.jl  ksvd_update_threaded_utils.jl  matching_pursuit.jl  set_num_threads.jl  svd_solvers.jl  util.jl
test/: atomreplacement.jl  ksvd.jl  matching_pursuit.jl  runtests.jl
