[project]
name = "ksvdbench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dictionary-learning>=0.1.0",
    "h5py>=3.13.0",
    "juliacall>=0.9.24",
    "juliapkg>=0.1.16",
    "nnsight<0.4",
    "sae-bench==0.4.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
